# sec-10k-extractor

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  decisions.md  plan.md  pyproject.toml  requirements.txt  spec.md  task.md  zeabur.json
.claude/: settings.json
eval/: build_fixtures.py  inspect_filing.py  probe_new_fixtures.py  run_eval.py  show_wrong_statuses.py  stress_test.py  test_status.py  with_server.sh
eval/fixtures/: README.md  filings.jsonl  format_eras.md
eval/results/: _latest.json  eval-20260430-135000.md  eval-20260430-140303.md  eval-20260430-140605.md  eval-20260430-140847.md  eval-20260430-141249.md  eval-20260430-145456.md  eval-20260430-152118.md  eval-20260430-155201.md  eval-20260430-170649.md  eval-20260430-171058.md  eval-20260430-181316.md  eval-20260430-185327.md
extractor/: __init__.py  canonical_items.py  fetcher.py  format_detect.py  llm_client.py  llm_resolver.py  locator.py  logging_config.py  normalizer.py  pipeline.py  resolver.py  status_detect.py  types.py  validator.py
extractor/prompts/: locator_fallback.md  status_resolver.md
prompts/: 01-framing.md  02-strategy-ladder.md  03-eval-set-design.md  04-cost-shield.md  README.md
server/: main.py
tests/: smoke_aapl.py  smoke_aapl_1996.py  test_abuse_prevention.py  test_canonical_items.py  test_input_validation.py  test_llm_resolver.py  test_locator_heading.py  test_logging.py  test_normalizer_and_locator.py  test_oversized_and_concurrent.py  test_pipeline_plain_text.py  test_plain_text.py  test_status_detect.py  test_unsupported_form.py  test_validator.py
